se agrega navbar

--- a/index.html
+++ b/index.html
@@ -23,48 +23,48 @@
     <header class="header">
         <h1>Menu</h1>
         <img src="./css/logos/benzo-logo.png" alt="logo de benzo" class="logo-benzo">
-        <ul>
-            <li><a href="">Burritos</a></li>
-            <li><a href="">No se que</a></li>
-            <li><a href="">Refrescos</a></li>
-            <li><a href="">Dulces</a></li>
-
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="">Menu</a></li>
+                <li><a href="">Menu</a></li>
+                <li><a href="">Menu</a></li>
+                <li><a href="">Menu</a></li>
+            </ul>
+        </nav>
     </header>
 
     <div class="row">
         <div class="col-sm-6">
-<<<<<<< HEAD
-            <div class="card">
+            <<<<<<< HEAD <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Special title treatment</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
-=======
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Burrito de asado</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
->>>>>>> fd21ed472dc69d60c334bed7abf73b2c753531d4
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                =======
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Burrito de asado</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        >>>>>>> fd21ed472dc69d60c334bed7abf73b2c753531d4
+                    </div>
                 </div>
-            </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Special title treatment</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                            </p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <<<<<<< HEAD </div>
+                    <p></p>
+                    =======
         </div>
-<<<<<<< HEAD
-    </div>
-    <p></p>
-=======
-      </div>
->>>>>>> fd21ed472dc69d60c334bed7abf73b2c753531d4
+        >>>>>>> fd21ed472dc69d60c334bed7abf73b2c753531d4
 </body>
 
 </html>
