se borraron espacios

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 
     <div class="row">
         <div class="col-sm-6">
-            <<<<<<< HEAD <div class="card">
+            <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Special title treatment</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
-                =======
+
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Burrito de asado</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
-                        >>>>>>> fd21ed472dc69d60c334bed7abf73b2c753531d4
+
                     </div>
                 </div>
                 <div class="col-sm-6">
@@ -59,11 +59,10 @@
                         </div>
                     </div>
                 </div>
-                <<<<<<< HEAD </div>
-                    <p></p>
-                    =======
+            </div>
+            <p></p>
+
         </div>
-        >>>>>>> fd21ed472dc69d60c334bed7abf73b2c753531d4
 </body>
 
 </html>
