se agregan cambios

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
                 <div class="card-body">
                     <h5 class="card-title">Special title treatment</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="#" class="btn btn-warning">+</a>
                 </div>
 
-                <div class="card">
+                <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
+                    <div class="card-header"class="card-title">Burrito de asado</div>
                     <div class="card-body">
-                        <h5 class="card-title">Burrito de asado</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-
+                        <img src="./css/fotos_productos/Rojo.jpg" width="200">
+                         </br>
+                        <a href="#" class="btn btn-warning">+</a>
                     </div>
                 </div>
                 <div class="col-sm-6">
@@ -55,7 +55,7 @@
                             <h5 class="card-title">Special title treatment</h5>
                             <p class="card-text">With supporting text below as a natural lead-in to additional content.
                             </p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-warning">+</a>
                         </div>
                     </div>
                 </div>
