se agregaron los recuadros de comida

--- a/index.html
+++ b/index.html
@@ -32,21 +32,58 @@
         </nav>
     </header>
 
-    <div class="row">
+    <h2>Burritos</h2>
+
+    <div class="tarjeta">
+
+        <div class="tarjeta-prueba">
+            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+            <button class="agregar-carrito">+</button>
+            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+        </div>
+
+        <div class="tarjeta-prueba">
+            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+            <button class="agregar-carrito">+</button>
+            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+        </div>
+
+        <div class="tarjeta-prueba">
+            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+            <button class="agregar-carrito">+</button>
+            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+        </div>
+
+        <div class="tarjeta-prueba">
+            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+            <button class="agregar-carrito">+</button>
+            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+        </div>
+
+        <div class="tarjeta-prueba">
+            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+            <button class="agregar-carrito">+</button>
+            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+        </div>
+    </div>
+
+    <!-- <div class="row">
         <div class="col-sm-6">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-warning">+</a>
+                    <h5 class="card-title">Burrito de Winnie</h5>
+                    <p class="card-text">
+                        <img class="foto-burrito" src="https://media-cdn.grubhub.com/image/upload/d_search:browse-images:default.jpg/w_150,q_auto:low,fl_lossy,dpr_2.0,c_fill,f_auto,h_130/nudserlyqrvhi9mjry4q" alt="Burrito de Winnie">
+                    </p>
+                    <a href="#" class="btn btn-primary">Agregar al carrito</a>
                 </div>
 
-                <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
-                    <div class="card-header"class="card-title">Burrito de asado</div>
+                <div class="card">
                     <div class="card-body">
-                        <img src="./css/fotos_productos/Rojo.jpg" width="200">
-                         </br>
-                        <a href="#" class="btn btn-warning">+</a>
+                        <h5 class="card-title">Burrito de asado</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+
                     </div>
                 </div>
                 <div class="col-sm-6">
@@ -55,14 +92,14 @@
                             <h5 class="card-title">Special title treatment</h5>
                             <p class="card-text">With supporting text below as a natural lead-in to additional content.
                             </p>
-                            <a href="#" class="btn btn-warning">+</a>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                 </div>
             </div>
             <p></p>
 
-        </div>
+        </div> -->
 </body>
 
 </html>
