se agregaron los recuadros de comida

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="tarjeta-prueba">
             <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
             <button class="agregar-carrito">+</button>
-            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+            <h2 class="texto-tarjeta">Burrito de Huevo</h2>
         </div>
 
         <div class="tarjeta-prueba">
