--- a/index.html
+++ b/index.html
@@ -36,34 +36,34 @@
 
     <div class="tarjeta">
 
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+        <div class="tarjeta-producto">
+            <img class="producto" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Winnie</h2>
         </div>
 
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+        <div class="tarjeta-producto">
+            <img class="producto" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
             <button class="agregar-carrito">+</button>
-            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+            <h2 class="texto-tarjeta">Burrito de Frijoles</h2>
         </div>
 
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+        <div class="tarjeta-producto">
+            <img class="producto" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Huevo</h2>
         </div>
 
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+        <div class="tarjeta-producto">
+            <img class="producto" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
             <button class="agregar-carrito">+</button>
-            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+            <h2 class="texto-tarjeta">Burrito de Pastor</h2>
         </div>
 
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+        <div class="tarjeta-producto>
+            <img class="producto" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
             <button class="agregar-carrito">+</button>
-            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+            <h2 class="texto-tarjeta">Burrito de Chilaquiles</h2>
         </div>
     </div>
 
