--- a/index.html
+++ b/index.html
@@ -37,31 +37,85 @@
     <div class="tarjeta">
 
         <div class="tarjeta-prueba">
-            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+            <img class="burrito-winnie"
+                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
+                alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Winnie</h2>
         </div>
 
         <div class="tarjeta-prueba">
-            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+            <img class="burrito-winnie"
+                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
+                alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Winnie</h2>
         </div>
 
         <div class="tarjeta-prueba">
-            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+            <img class="burrito-winnie"
+                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
+                alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Huevo</h2>
         </div>
 
         <div class="tarjeta-prueba">
-            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+            <img class="burrito-winnie"
+                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
+                alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Winnie</h2>
         </div>
 
         <div class="tarjeta-prueba">
-            <img class="burrito-winnie" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
+            <img class="burrito-winnie"
+                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
+                alt="Burrito">
+            <button class="agregar-carrito">+</button>
+            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+        </div>
+    </div>
+
+    <h2>Frituras</h2>
+    <div class="tarjeta">
+
+        <div class="tarjeta-prueba">
+            <img class="burrito-winnie"
+                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
+                alt="Burrito">
+            <button class="agregar-carrito">+</button>
+            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+        </div>
+
+        <div class="tarjeta-prueba">
+            <img class="burrito-winnie"
+                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
+                alt="Burrito">
+            <button class="agregar-carrito">+</button>
+            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+        </div>
+
+        <div class="tarjeta-prueba">
+            <img class="burrito-winnie"
+                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
+                alt="Burrito">
+            <button class="agregar-carrito">+</button>
+            <h2 class="texto-tarjeta">Burrito de Huevo</h2>
+        </div>
+
+        <div class="tarjeta-prueba">
+            <img class="burrito-winnie"
+                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
+                alt="Burrito">
+            <button class="agregar-carrito">+</button>
+            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+        </div>
+
+        <div class="tarjeta-prueba">
+            <img class="burrito-winnie"
+                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
+                alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Winnie</h2>
         </div>
