--- a/index.html
+++ b/index.html
@@ -101,40 +101,40 @@
     <h2>Frituras</h2>
     <div class="tarjeta">
 
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
+        <div class="tarjeta-producto">
+            <img class="producto"
                 src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
                 alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Winnie</h2>
         </div>
 
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
+        <div class="tarjeta-producto">
+            <img class="producto"
                 src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
                 alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Winnie</h2>
         </div>
 
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
+        <div class="tarjeta-producto">
+            <img class="producto"
                 src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
                 alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Huevo</h2>
         </div>
 
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
+        <div class="tarjeta-producto">
+            <img class="producto"
                 src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
                 alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Winnie</h2>
         </div>
 
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
+        <div class="tarjeta-producto">
+            <img class="producto"
                 src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
                 alt="Burrito">
 
