--- a/index.html
+++ b/index.html
@@ -36,116 +36,78 @@
 
     <div class="tarjeta">
 
-<<<<<<< HEAD
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
-                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
-                alt="Burrito">
-=======
         <div class="tarjeta-producto">
-            <img class="producto" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
->>>>>>> d9349dc3fb1fd43ff32d9f158a1852f3c7e8b32e
+            <img class="foto-producto"
+                src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
+                alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Winnie</h2>
         </div>
 
-<<<<<<< HEAD
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
-                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
-                alt="Burrito">
-=======
         <div class="tarjeta-producto">
-            <img class="producto" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
->>>>>>> d9349dc3fb1fd43ff32d9f158a1852f3c7e8b32e
+            <img class="foto-producto"
+                src="https://lh3.googleusercontent.com/proxy/kVM_-admjTNRNckY_vLFti-Dhh4EIz8psPEpyi3_HxD5c_TdbP2OFoQKBTGetBzmpPJV2w8Z9vznUnxjKGfeT-dKFijiHjrwLk8ltzqurB05R4C-K_PyKIrWR8frJ-g"
+                alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Frijoles</h2>
         </div>
 
-<<<<<<< HEAD
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
-                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
-                alt="Burrito">
-=======
         <div class="tarjeta-producto">
-            <img class="producto" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
->>>>>>> d9349dc3fb1fd43ff32d9f158a1852f3c7e8b32e
+            <img class="foto-producto"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwF6wu9g31hjfxkYTf0PCDF5yJ9bx0GH5u0SEs-5M3nQ&s"
+                alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Huevo</h2>
         </div>
 
-<<<<<<< HEAD
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
-                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
-                alt="Burrito">
-=======
         <div class="tarjeta-producto">
-            <img class="producto" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
->>>>>>> d9349dc3fb1fd43ff32d9f158a1852f3c7e8b32e
+            <img class="foto-producto"
+                src="https://sumerlabs.com/sumer-app-90b8f.appspot.com/product_photos%2F3c12fc197160be0126807effbba22402%2Fb347e120-c5a9-11ec-811a-596b023a71f2?alt=media&token=174914b6-7fee-4608-afda-2f7292ceb5e6"
+                alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Pastor</h2>
         </div>
 
-<<<<<<< HEAD
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
-                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
-                alt="Burrito">
-            <button class="agregar-carrito">+</button>
-            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
-        </div>
     </div>
 
+        <!-- ------------------------------------------------------------------------------------------ -->
+
     <h2>Frituras</h2>
+
     <div class="tarjeta">
 
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
+        <div class="tarjeta-producto">
+            <img class="foto-producto"
                 src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
                 alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Winnie</h2>
         </div>
 
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
+        <div class="tarjeta-producto">
+            <img class="foto-producto"
                 src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
                 alt="Burrito">
             <button class="agregar-carrito">+</button>
-            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+            <h2 class="texto-tarjeta">Burrito de Frijoles</h2>
         </div>
 
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
-                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
+        <div class="tarjeta-producto">
+            <img class="foto-producto"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwF6wu9g31hjfxkYTf0PCDF5yJ9bx0GH5u0SEs-5M3nQ&s"
                 alt="Burrito">
             <button class="agregar-carrito">+</button>
             <h2 class="texto-tarjeta">Burrito de Huevo</h2>
         </div>
 
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
+        <div class="tarjeta-producto">
+            <img class="foto-producto"
                 src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
                 alt="Burrito">
             <button class="agregar-carrito">+</button>
-            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
-        </div>
-
-        <div class="tarjeta-prueba">
-            <img class="burrito-winnie"
-                src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ"
-                alt="Burrito">
-=======
-        <div class="tarjeta-producto>
-            <img class="producto" src="https://i.ytimg.com/vi/L2Awmt_wEdU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDPEwXKbOYzDY1eWmxVqbVrWsY0lQ" alt="Burrito">
->>>>>>> d9349dc3fb1fd43ff32d9f158a1852f3c7e8b32e
-            <button class="agregar-carrito">+</button>
-            <h2 class="texto-tarjeta">Burrito de Chilaquiles</h2>
+            <h2 class="texto-tarjeta">Burrito de Pastor</h2>
         </div>
     </div>
-
 </body>
 
 </html>
