--- a/inicio-sesion.html
+++ b/inicio-sesion.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -9,22 +10,29 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="./css/logos/benzo-logo.png" >
+    <link rel="shortcut icon" href="./css/logos/benzo-logo.png">
     <title>Benzo</title>
     <link rel="stylesheet" type="text/css" href="./css/inicioSecion.css">
+    <script src="login.js"></script>
 </head>
+
 <body>
     <form class="login-form">
-        <div> 
+        <div>
             <img class="LogoSesion" src="./css/logos/benzo-logo.png" alt="">
         </div>
-          
-        <input type="email" class="login-username" autofocus="true" required="true" placeholder="Email" />
-        <input type="password" class="login-password" required="true" placeholder="Password" />
-        <input type="submit" name="Login" value="Login" class="login-submit"/>
-      </form>
-      <a href="#" class="login-forgot-pass">forgot password?</a>
-      <div class="underlay-photo"></div>
-      <div class="underlay-black"></div> 
+
+        <label for="">Usuario</label>
+        <input type="text" class="login-username" autofocus="true" required="true" placeholder="Email" id="usuario"/>
+
+        <label for="">Constrasenia</label>
+        <input type="password" class="login-password" required="true" placeholder="Contrasenia" id="clave" />
+        
+        <input type="button" value="Entrar" class="login-submit" onclick="logear()" />
+    </form>
+    <a href="#" class="login-forgot-pass">olvidaste tu contrasena?</a>
+    <div class="underlay-photo"></div>
+    <div class="underlay-black"></div>
 </body>
+
 </html>
