--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>Benzo</title>
     <link rel="shortcut icon" href="./css/logos/benzo-logo.png">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <script src="./jss/index.js" async></script>
 </head>
 
 <body>
@@ -26,10 +27,10 @@
         <img src="./css/logos/benzo-logo.png" alt="logo de benzo" class="logo-benzo">
         <nav>
             <ul>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Menu</a></li>
+                <li><a href="#">Burritos</a></li>
+                <li><a href="#">Frituras</a></li>
+                <li><a href="#">Refrescos</a></li>
+                <li><a href="#">Otros</a></li>
             </ul>
         </nav>
     </header>
@@ -163,7 +164,7 @@
                 <div class="fila">
                     <strong>Tu Total</strong>
                     <span class="carrito-precio-total">
-                        $100,000.00
+                        $66.00
                     </span>
                 </div>
                 <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i></button>
