se actualizo codigo

--- a/index.html
+++ b/index.html
@@ -40,34 +40,38 @@
             <section>
                 <h2>Burritos</h2>
                 <div class="menu-Productos">
-                    <div class="tarjeta">
+                    <div class="item">
                         <div class="tarjeta-producto">
                             <img class="foto-producto"
-                                src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
+                                src="https://lh3.googleusercontent.com/proxy/kVM_-admjTNRNckY_vLFti-Dhh4EIz8psPEpyi3_HxD5c_TdbP2OFoQKBTGetBzmpPJV2w8Z9vznUnxjKGfeT-dKFijiHjrwLk8ltzqurB05R4C-K_PyKIrWR8frJ-g"
                                 alt="Burrito">
                             <button class="agregar-carrito">+</button>
-                            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+                            <span class="texto-tarjeta">Burrito de frijoles</span>
                         </div>
+                        <span class="precio-item">$22.000</span>
                     </div>
-                    <div class="tarjeta">
+                    <div class="item">
                         <div class="tarjeta-producto">
                             <img class="foto-producto"
                                 src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
                                 alt="Burrito">
                             <button class="agregar-carrito">+</button>
-                            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+                            <span class="texto-tarjeta">Burrito de Winnie </span>
+                            <span class="precio-item">$22.000</span>
                         </div>
+                        
                     </div>
-                    <div class="tarjeta">
+                    <div class="item">
                         <div class="tarjeta-producto">
                             <img class="foto-producto"
                                 src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
                                 alt="Burrito">
                             <button class="agregar-carrito">+</button>
-                            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+                            <span class="texto-tarjeta">Burrito de Winnie</span>
                         </div>
+                        <span class="precio-item">$22.000</span>
                     </div>
-                    <div class="tarjeta">
+                    <div class="item">
                         <div class="tarjeta-producto">
                             <img class="foto-producto"
                                 src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
@@ -75,6 +79,7 @@
                             <button class="agregar-carrito">+</button>
                             <h2 class="texto-tarjeta">Burrito de Winnie</h2>
                         </div>
+                        <span class="precio-item">$22.000</span>
                     </div>
                 </div>
             </section>
@@ -82,16 +87,17 @@
             <section>
                 <h2>Frituras</h2>
                 <div class="menu-Productos">
-                    <div class="tarjeta">
+                    <div class="item">
                         <div class="tarjeta-producto">
                             <img class="foto-producto"
-                                src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
+                                src="./css/fotos_productos/sabritas_adobadas.png"
                                 alt="Burrito">
                             <button class="agregar-carrito">+</button>
-                            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+                            <span class="texto-tarjeta">Sabritas Adobadas</span>
                         </div>
+                        <span class="precio-item">$18.000</span>
                     </div>
-                    <div class="tarjeta">
+                    <div class="item">
                         <div class="tarjeta-producto">
                             <img class="foto-producto"
                                 src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
@@ -99,8 +105,9 @@
                             <button class="agregar-carrito">+</button>
                             <h2 class="texto-tarjeta">Burrito de Winnie</h2>
                         </div>
+                        <span class="precio-item">$18.000</span>
                     </div>
-                    <div class="tarjeta">
+                    <div class="item">
                         <div class="tarjeta-producto">
                             <img class="foto-producto"
                                 src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
@@ -108,8 +115,9 @@
                             <button class="agregar-carrito">+</button>
                             <h2 class="texto-tarjeta">Burrito de Winnie</h2>
                         </div>
+                        <span class="precio-item">$18.000</span>
                     </div>
-                    <div class="tarjeta">
+                    <div class="item">
                         <div class="tarjeta-producto">
                             <img class="foto-producto"
                                 src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
@@ -117,6 +125,7 @@
                             <button class="agregar-carrito">+</button>
                             <h2 class="texto-tarjeta">Burrito de Winnie</h2>
                         </div>
+                        <span class="precio-item">$18.000</span>
                     </div>
                 </div>
             </section>
