--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
+<html lang="es">
 
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-        crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="./css/logos/benzo-logo.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Benzo</title>
     <link rel="shortcut icon" href="./css/logos/benzo-logo.png">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <script src="./jss/index.js" async></script>
 </head>
 
 <body>
@@ -42,91 +34,49 @@
                 <div class="menu-Productos">
                     <div class="item">
                         <div class="tarjeta-producto">
-                            <img class="foto-producto"
-                                src="https://lh3.googleusercontent.com/proxy/kVM_-admjTNRNckY_vLFti-Dhh4EIz8psPEpyi3_HxD5c_TdbP2OFoQKBTGetBzmpPJV2w8Z9vznUnxjKGfeT-dKFijiHjrwLk8ltzqurB05R4C-K_PyKIrWR8frJ-g"
-                                alt="Burrito">
+                            <img class="foto-producto" src="https://lh3.googleusercontent.com/proxy/kVM_-admjTNRNckY_vLFti-Dhh4EIz8psPEpyi3_HxD5c_TdbP2OFoQKBTGetBzmpPJV2w8Z9vznUnxjKGfeT-dKFijiHjrwLk8ltzqurB05R4C-K_PyKIrWR8frJ-g" alt="Burrito">
                             <button class="agregar-carrito">+</button>
                             <span class="texto-tarjeta">Burrito de frijoles</span>
                         </div>
                         <span class="precio-item">$22.000</span>
                     </div>
-                    <div class="item">
-                        <div class="tarjeta-producto">
-                            <img class="foto-producto"
-                                src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
-                                alt="Burrito">
-                            <button class="agregar-carrito">+</button>
-                            <span class="texto-tarjeta">Burrito de Winnie </span>
-                            <span class="precio-item">$22.000</span>
-                        </div>
-                        
-                    </div>
-                    <div class="item">
-                        <div class="tarjeta-producto">
-                            <img class="foto-producto"
-                                src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
-                                alt="Burrito">
-                            <button class="agregar-carrito">+</button>
-                            <span class="texto-tarjeta">Burrito de Winnie</span>
-                        </div>
-                        <span class="precio-item">$22.000</span>
-                    </div>
-                    <div class="item">
-                        <div class="tarjeta-producto">
-                            <img class="foto-producto"
-                                src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
-                                alt="Burrito">
-                            <button class="agregar-carrito">+</button>
-                            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
-                        </div>
-                        <span class="precio-item">$22.000</span>
-                    </div>
-                </div>
-            </section>
 
-            <section>
-                <h2>Frituras</h2>
-                <div class="menu-Productos">
                     <div class="item">
                         <div class="tarjeta-producto">
-                            <img class="foto-producto"
-                                src="./css/fotos_productos/sabritas_adobadas.png"
-                                alt="Burrito">
+                            <img class="foto-producto" src="https://lh3.googleusercontent.com/proxy/kVM_-admjTNRNckY_vLFti-Dhh4EIz8psPEpyi3_HxD5c_TdbP2OFoQKBTGetBzmpPJV2w8Z9vznUnxjKGfeT-dKFijiHjrwLk8ltzqurB05R4C-K_PyKIrWR8frJ-g" alt="Burrito">
                             <button class="agregar-carrito">+</button>
-                            <span class="texto-tarjeta">Sabritas Adobadas</span>
+                            <span class="texto-tarjeta">Burrito de frijoles</span>
                         </div>
-                        <span class="precio-item">$18.000</span>
+                        <span class="precio-item">$22.000</span>
                     </div>
+
                     <div class="item">
                         <div class="tarjeta-producto">
-                            <img class="foto-producto"
-                                src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
-                                alt="Burrito">
+                            <img class="foto-producto" src="https://lh3.googleusercontent.com/proxy/kVM_-admjTNRNckY_vLFti-Dhh4EIz8psPEpyi3_HxD5c_TdbP2OFoQKBTGetBzmpPJV2w8Z9vznUnxjKGfeT-dKFijiHjrwLk8ltzqurB05R4C-K_PyKIrWR8frJ-g" alt="Burrito">
                             <button class="agregar-carrito">+</button>
-                            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+                            <span class="texto-tarjeta">Burrito de frijoles</span>
                         </div>
-                        <span class="precio-item">$18.000</span>
+                        <span class="precio-item">$22.000</span>
                     </div>
+
                     <div class="item">
                         <div class="tarjeta-producto">
-                            <img class="foto-producto"
-                                src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
-                                alt="Burrito">
+                            <img class="foto-producto" src="https://lh3.googleusercontent.com/proxy/kVM_-admjTNRNckY_vLFti-Dhh4EIz8psPEpyi3_HxD5c_TdbP2OFoQKBTGetBzmpPJV2w8Z9vznUnxjKGfeT-dKFijiHjrwLk8ltzqurB05R4C-K_PyKIrWR8frJ-g" alt="Burrito">
                             <button class="agregar-carrito">+</button>
-                            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+                            <span class="texto-tarjeta">Burrito de frijoles</span>
                         </div>
-                        <span class="precio-item">$18.000</span>
+                        <span class="precio-item">$22.000</span>
                     </div>
+
                     <div class="item">
                         <div class="tarjeta-producto">
-                            <img class="foto-producto"
-                                src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
-                                alt="Burrito">
+                            <img class="foto-producto" src="https://lh3.googleusercontent.com/proxy/kVM_-admjTNRNckY_vLFti-Dhh4EIz8psPEpyi3_HxD5c_TdbP2OFoQKBTGetBzmpPJV2w8Z9vznUnxjKGfeT-dKFijiHjrwLk8ltzqurB05R4C-K_PyKIrWR8frJ-g" alt="Burrito">
                             <button class="agregar-carrito">+</button>
-                            <h2 class="texto-tarjeta">Burrito de Winnie</h2>
+                            <span class="texto-tarjeta">Burrito de frijoles</span>
                         </div>
-                        <span class="precio-item">$18.000</span>
+                        <span class="precio-item">$22.000</span>
                     </div>
+                    <!-- Repetir para otros productos -->
                 </div>
             </section>
         </div>
@@ -136,50 +86,19 @@
                 <h2>Tu Carrito</h2>
             </div>
             <div class="carrito-items">
-                <div class="carrito-item">
-                    <img src="https://lh3.googleusercontent.com/proxy/kVM_-admjTNRNckY_vLFti-Dhh4EIz8psPEpyi3_HxD5c_TdbP2OFoQKBTGetBzmpPJV2w8Z9vznUnxjKGfeT-dKFijiHjrwLk8ltzqurB05R4C-K_PyKIrWR8frJ-g"
-                        alt="" width="80px">
-                    <div class="carrito-item-detalles">
-                        <span class="carrito-item-titulo">Burrito de frijoles</span>
-                        <div class="selector-cantidad">
-                            <i class="fa-solid fa-minus restar-cantidad"></i>
-                            <input type="text" value="2" class="carrito-item-cantidad" disabled>
-                            <i class="fa-solid fa-plus sumar-cantidad"></i>
-                        </div>
-                        <span class="carrito-item-precio">$22.000</span>
-                    </div>
-                    <span class="btn-eliminar">
-                        <i class="fa-solid fa-trash"></i>
-                    </span>
-                </div>
-                <div class="carrito-item">
-                    <img src="https://lh4.googleusercontent.com/proxy/Lq9A2nOY5b0K4279Ha6vrBLeGFxwR_8nlR0M5vkC5T8AwQ1X-536npjoEnNjhBwvh6siWixetBTM1sBkrvOsoDyztHUMTy_RBiSpqMcDPKW61HeQpUoJQV4nTvGD0qKtcWjTgt-npG5dOdttezezX66b"
-                        alt="" width="80px">
-                    <div class="carrito-item-detalles">
-                        <span class="carrito-item-titulo">Burrito de winnie</span>
-                        <div class="selector-cantidad">
-                            <i class="fa-solid fa-minus restar-cantidad"></i>
-                            <input type="text" value="1" class="carrito-item-cantidad" disabled>
-                            <i class="fa-solid fa-plus sumar-cantidad"></i>
-                        </div>
-                        <span class="carrito-item-precio">$22.000</span>
-                    </div>
-                    <span class="btn-eliminar">
-                        <i class="fa-solid fa-trash"></i>
-                    </span>
-                </div>
+                <!-- Items del carrito -->
             </div>
             <div class="carrito-total">
                 <div class="fila">
                     <strong>Tu Total</strong>
-                    <span class="carrito-precio-total">
-                        $66.00
-                    </span>
+                    <span class="carrito-precio-total">$0,00</span>
                 </div>
                 <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i></button>
             </div>
         </section>
     </section>
+
+    <script src="./jss/index.js"></script>
 </body>
 
 </html>
